adding the header using css

--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+   
 </head>
-<body>
-
+<body>    
     <div class="header">
         <h4 class="logo">Header Logo</h4>
 
         <div class="links">
             <ul>
-                <li><a href="#1"></a>Header link one</li>
-                <li><a href="#2"></a>Header link two</li>
-                <li><a href="#3"></a>Header link three</li>
+                <li><a href="#1"></a>Header link one </li>
+                <li><a href="#2"></a>Header link two </li>
+                <li><a href="#3"></a>Header link three </li>
             </ul>
         </div>
     </div>
