--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet"> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
    
 </head>
@@ -22,10 +26,14 @@
     </div>
 
     <div class="bio">
-        <h1 class="awesome">This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast</p>
-        <button>Sign Up</button>
-        <img>
+        <div class="text">
+            <h1 class="awesome">This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast</p>
+            <button>Sign Up</button>
+        </div>
+        <div>
+            <img id="dog" src="./Images/charlesdeluvio-Mv9hjnEUHR4-unsplash.jpg">
+        </div>
     </div>
 
     <div class="info">
