adding the quote section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -37,15 +36,27 @@
     </div>
 
     <div class="info">
-        <h3>Some random information</h3>
-            <div class="containers">
-                
+        <h3>Some random information.</h3>
+            <div id="boxes">
+                <div class="containers">
+                    <img>
+                </div>
+                <div class="containers">
+                    <img>
+                </div>
+                <div class="containers">
+                    <img>
+                </div>
+                <div class="containers">
+                    <img>
+                </div>
             </div>
     </div>
 
     <div class="quote">
         <p>This is an inspiring quote, or a testamonial from a customer. 
             Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice</p>
+        <h3>-Thor, God of Thunder</h3>
     </div>
 </body>
 </html>
