--- a/index.html
+++ b/index.html
@@ -40,15 +40,19 @@
             <div id="boxes">
                 <div class="containers">
                     <img>
+                    <p class="caption">this is some subtext under an illustration or image</p>
                 </div>
                 <div class="containers">
                     <img>
+                    <p class="caption">this is some subtext under an illustration or image</p>
                 </div>
                 <div class="containers">
                     <img>
+                    <p class="caption">this is some subtext under an illustration or image</p>
                 </div>
                 <div class="containers">
                     <img>
+                    <p class="caption">this is some subtext under an illustration or image</p>
                 </div>
             </div>
     </div>
@@ -57,6 +61,19 @@
         <p>This is an inspiring quote, or a testamonial from a customer. 
             Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice</p>
         <h3>-Thor, God of Thunder</h3>
+    </div>
+
+    <div class="adbox">
+        <div  class="text-content">
+            <h4>Call to action! It's time!</h4>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+            <button id="signup">Sign up</button>
+    </div>
+
+    <div class="footer">
+        <h6>Copyright © The Odin Project 2025</h6>
+
     </div>
 </body>
 </html>
